--- a/styles.css
+++ b/styles.css
@@ -17,15 +17,20 @@ form {
     background-color: RGB(18, 0, 181);
     padding-top: 10px;
     padding-bottom: 10px;
+    height: 100%;
 }
 .details {
     background-color: RGB(0, 161, 215);
     padding-top: 10px;
+    height: 100%;
 }
 .temp {
-    background-color: RGB(87, 248, 238);
-    padding-top: 20px;
-    padding-bottom: 20px;
+    background-color: RGB(0, 161, 215);
+    height: 100%;
+}
+
+span {
+    font-size: 3rem;
 }
 /*
 .container-forecast {
