--- a/styles.css
+++ b/styles.css
@@ -4,16 +4,19 @@ body {
     letter-spacing: 0.2em;
     font-size: 14px;
     color: white;
+    background-color: RGB(18, 0, 181);
 }
 
  .container-daily {
     max-width: 400px;
     height: 100%;
-    border: 1px solid black;
     margin: auto;
     text-align: center;
 }
 
+.container-daily h1 {
+    margin-top: 20px;;
+}
 h1 {
     font-size: 2.5rem;
 }
@@ -23,6 +26,7 @@ form {
     padding-top: 10px;
     padding-bottom: 10px;
     height: 100%;
+    margin-top: 20px;
 }
 .details {
     background-color: RGB(0, 161, 215);
