Add class to hide and unhide data

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ form {
     padding-bottom: 10px;
     height: 100%;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 .details {
     background-color: RGB(0, 161, 215);
