--- a/styles.css
+++ b/styles.css
@@ -53,12 +53,6 @@ span {
     font-size: 2.5rem;
     font-weight: bold;
 }
-/*
-.container-forecast {
-    max-width: 100%;
-    height: 700px;
-    border: 1px solid black;
-} */
 
 
 .icon {
@@ -71,3 +65,24 @@ span {
     background-color: white;
 }
 
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    background-color:white;
+    color: black;
+    margin: auto;
+    margin-top: 60px;
+  }
+
+  th {
+     background-color: RGB(0, 161, 215);
+     color: white;
+  }
+  th, td {
+    padding: 5px;
+    text-align: left;    
+  }
+
+  .container-forecast table h1 {
+    margin: auto;
+  }
