--- a/styles.css
+++ b/styles.css
@@ -10,17 +10,23 @@ body {
 }
 
  .container-daily {
-    max-width: 400px;
-    height: 100%;
-    margin: auto;
+    max-width: 300px;
+    height: 75%;
+    /* margin: auto; */
     text-align: center;
 }
 
 .container-daily h1 {
-    margin-top: 20px;;
+    margin-top: 20px;
 }
+
 h1 {
     font-size: 2.5rem;
+}
+
+.update-city {
+    text-align: center;
+    border: 2px solid black;
 }
 
 form {
@@ -62,7 +68,9 @@ span {
     border-radius: 50%;
     width: 100px;
     margin-bottom: -100px;
-    background-color: white;
+    /* background-color: RGB(0, 230, 235);
+    background-color: RGB(18, 0, 137); */
+    background-color: RGB(87, 248, 238);
 }
 
 table, th, td {
@@ -70,7 +78,7 @@ table, th, td {
     border-collapse: collapse;
     background-color:white;
     color: black;
-    margin: auto;
+    /* margin: auto; */
     margin-top: 60px;
     margin-bottom: 60px;
   }
@@ -87,3 +95,4 @@ table, th, td {
   .container-forecast table h1 {
     margin: auto;
   }
+
