--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,31 @@ h1 {
     font-size: 2.5rem;
 }
 
+.card {
+    margin-bottom: 100px;
+}
+
 .update-city {
     text-align: center;
-    border: 2px solid black;
+    /* border: 2px solid black; */
+    margin-top: 20px;
 }
+
+.left {
+    width: 40%;
+    margin: auto;
+  }
+  
+  .right {
+    width: 60%;
+    margin: auto;
+  }
+
+  .flex {
+    display: flex;
+    width: 100%;
+  }
+  
 
 form {
     background-color: RGB(18, 0, 181);
@@ -35,7 +56,7 @@ form {
     padding-bottom: 10px;
     height: 100%;
     margin-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
 }
 
 .time {
@@ -79,8 +100,8 @@ table, th, td {
     background-color:white;
     color: black;
     /* margin: auto; */
-    margin-top: 60px;
-    margin-bottom: 60px;
+    margin-top: -50px;
+    /* margin-bottom: 60px; */
   }
 
   th {
@@ -96,3 +117,7 @@ table, th, td {
     margin: auto;
   }
 
+  .table-header h2 {
+    position: absolute;
+    margin-top: -100px;
+  }
