Update forecast to object oriented code

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,12 @@ body {
     font-family: Tahoma;
 }
 
+
+.background-image {
+  background-image: 'img/rain.mp4'
+}
+
+
  .container-daily {
     max-width: 300px;
     height: 75%;
